# AgentMesh

./: .editorconfig  .env.example  .gitignore  AgentMesh.md  AgentMesh_Arquitectura_Hexagonal.md  Anchor.toml  Cargo.toml  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  plan-develop.md  pyproject.toml  tsconfig.base.json
apps/agent-server/: package.json  tsconfig.json
apps/agent-server/src/: app.module.ts  health.controller.ts  main.ts
apps/agent-server/src/config/: config.module.ts  env.ts
apps/agent-server/src/modules/judge/: evaluator.ts  index.ts  judge.module.ts
apps/agent-server/src/modules/optimizer/: index.ts  optimizer.module.ts  tokens.ts
apps/agent-server/src/modules/orchestrator/: index.ts  orchestrator.module.ts
apps/agent-server/src/modules/router/: classifier.ts  index.ts  router.module.ts
apps/agent-server/src/modules/sdk-gateway/: index.ts  (+1 more)
apps/agent-server/src/testing/: epic-test.controller.ts
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
docs/: epic-02-issues-03-06.md  epic-03-optimizer.md  epic04-router-integration.md  epic05-judge-integration.md  epic06-orchestrator-implementation.md  epic07-workers-implementation.md  epic08-x402-implementation.md  epic09-sdk-implementation.md  model-provider-configuration.md  postman-epic04-05.md  setup.md
infra/postgres/: init.sql
postman/: AgentMesh_EPIC04_05.postman_collection.json  AgentMesh_EPIC04_05.postman_environment.json
prisma/: schema.prisma
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: lib.rs
programs/consensus/: Cargo.toml
programs/consensus/src/: lib.rs
programs/reputation-ledger/: Cargo.toml
programs/reputation-ledger/src/: lib.rs
programs/task-escrow/: Cargo.toml
programs/task-escrow/src/: lib.rs
scripts/: db-reset.sh  eval-judge.ts  eval-optimizer.ts  eval-orchestrator.ts  eval-router.ts  eval-sdk.ts  eval-workers.ts  eval-x402.ts  post-task.ts  register-judge-agent.ts  register-router-agent.ts  seed-agents.ts
tests/fixtures/: README.md  representative-queries.json
tests/integration/: README.md
tests/programs/: README.md
workers-py/analyzer/: README.md  analyzer.py
workers-py/researcher/: README.md  researcher.py
(+149 files in other folders)
