[package]
name = "agent-registry"
version = "0.1.0"
description = "AgentMesh Agent Registry program placeholder for EPIC-02"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow" }
