[package]
name = "consensus"
version = "0.1.0"
description = "AgentMesh Consensus program placeholder for EPIC-02"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "consensus"

[features]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "task-escrow/idl-build"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
task-escrow = { path = "../task-escrow", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "allow" }
