[package]
name = "reputation-ledger"
version = "0.1.0"
description = "AgentMesh Reputation Ledger Pinocchio program for EPIC-02"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation_ledger"

[features]
bpf-entrypoint = []
default = []

[dependencies]
pinocchio = { version = "0.11.1", features = ["cpi"] }
